# misc-recipes

./: .gitignore  README.md
apue/inter-process/: .clang_complete  main.cc  mmap_producer.cc  mmap_test.cc  mutex_example.cc  nums.txt  posix_semaphore_example.cc  producer.cc  recordlock_example.cc  rwlock_example  rwlock_example.cc  shared_memory_manager.cc  shared_memory_manager.h  shared_memory_mapper.h  xsi_semaphore_example.cc
apue/io/: README.md
apue/io/src/: CMakeLists.txt
apue/io/src/io/: ClibApi.cpp  UnixFileApi.cpp
apue/io/src/test/: CMakeLists.txt  TestRunner.cpp
apue/src/: main.cpp
apue/src/error/: SystemError.cpp  SystemError.h
apue/src/io/: ClibApi.h  UnixFileApi.h
apue/src/test/: IoTest.cpp  IoTest.h  TestRunner.h
c/server-client/: Dockerfile  generate-docker.sh  init-docker.sh  install.sh  run-docker.sh
c/server-client/src/http-client/: Makefile  main.c
c/server-client/src/http-server/: Makefile  http_server  main.c
cmake/example/: CMakeLists.txt
cmake/example/src/: CMakeLists.txt  main.c  sqrt.c  sqrt.h
cmake/example/src/mathfunctions/src/: CMakeLists.txt  mysqrt.c  mysqrt.h
cmake/official-examples/: README.md
cmake/official-examples/building-installer/src/: CMakeLists.txt  tutorial.cpp
cmake/official-examples/dashboard/src/: CMakeLists.txt
cmake/official-examples/dashboard/src/MathFunctions/: CMakeLists.txt
cmake/official-examples/generate-file/src/: CMakeLists.txt  tutorial.cpp
cmake/official-examples/generate-file/src/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
cmake/official-examples/install-and-testing/src/: CMakeLists.txt  tutorial.cpp
cmake/official-examples/nonlib/src/: CMakeLists.txt
cmake/official-examples/system-introspection/src/: CMakeLists.txt  tutorial.cpp
cmake/official-examples/system-introspection/src/MathFunctions/: MathFunctions.cpp
cmake/official-examples/withlib/src/: CMakeLists.txt  tutorial.cpp
cmake/official-examples/withlib/src/MathFunctions/: mysqrt.cpp
cpp/cpp11/: README.md  main.cpp
cpp/cpp11/src/: CMakeLists.txt  main.cpp
cpp/cpp11/src/boost_cases/: BoostFeature.cpp  BoostFeature.h  CMakeLists.txt
cpp/cpp11/src/common/: CMakeLists.txt  CommonFeature.cpp  CommonFeature.h
cpp/cpp11/src/commonUtil/: CMakeLists.txt  commonUtil.cpp  commonUtil.h
cpp/cpp11/src/container/: CMakeLists.txt  ContainerFeature.cpp  ContainerFeature.h
cpp/cpp11/src/error/: CMakeLists.txt  SystemError.h
cpp/cpp11/src/ioutils/: CMakeLists.txt  IoFeature.cpp  IoFeature.h
cpp/cpp11/src/test/: CMakeLists.txt  TestRunner.cpp  TestRunner.h
cpp/cpp11/src/thread/: CMakeLists.txt  threadFeature.cpp  threadFeature.h
cpp/use-stdarg/: main.c
cpp/use-uuid/: main.c
docker/: Dockerfile  docker-build.sh  docker-entrypoint.sh  docker-run.sh
elisp/: test-1.el  test-2.el  test-3.el  test-4.el
lua/c-call-lua/test1/: Makefile  main.c  tabVar.lua  twoVar2.lua
lua/c-call-lua/test2/: func1.lua  main.c
lua/lua-call-c/test1/: main.c
lua/lua-call-c/test2/: Account.c  HelperFuncs.c  HelperFuncs.h  Makefile  myArray.c  myDir.c  mylib.c  test.lua
lua/luajit-call-cpp/: main.lua
lua/luajit-call-cpp/c-module/example/: hello.cc  hello.h  hello.lua  libhello.cc  main.lua  makefile
lua/luajit-call-cpp/c-module/face-manager/: FaceKernel.h  LibFaceManager.cc  face_manager.lua  makefile
lua/luajit-call-cpp/c-module/face-module/: FaceKernel.cc  FaceKernel.h  libFaceManager.cc  lib_face_manager.lua  makefile
lua/luajit-call-cpp/modules/: HeapModule.lua  SolutionModule.lua  StackModule.lua  TableModule.lua
lua/test/: main.lua  test.lua
lua/util/: stackDump.c  stackDump.h
openresty/: cpu.sh
perl/: test-data.tmp  test.perl
protobuf/cpp/src/: CMakeLists.txt  ReadMessage.cc  WriteMessage.cc  main.cc
protobuf/cpp/src/protos/: rpcservice.proto  school.proto
shell/: awk-simple.sh  awk.sh  datamash.sh  nginx-find-proc.sh  nginx-kill-proc.sh  nginx-watch-pids.sh
systemtap/: case.stp  main.cc  sigmon.stp  tutorial.stp
wrk/: main.lua
